--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "seneca-demo",
+  "name": "xservices",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "docker.start": "pm2-runtime start process.config.js --env production"
+    "debug.api": "pm2-runtime start ./api/process.config.js --env development",
+    "debug.order-srv": "pm2-runtime start ./order-srv/process.config.js --env development",
+    "docker.build": "docker build --no-cache -t xservices:latest .",
+    "docker.start.api": "pm2-runtime start ./api/process.config.js --env production",
+    "docker.start.order-srv": "pm2-runtime start ./order-srv/process.config.js --env production",
+    "docker.start.seneca-srv1": "pm2-runtime start ./srv1/process.config.js --env production",
+    "docker.prune": "docker container prune -f && docker image prune -f"
   },
   "author": "peyton",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.1.0",
     "bluebird": "^3.5.5",
     "commander": "^3.0.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "hapi": "^18.1.0",
     "request": "^2.88.0",
@@ -18,6 +27,7 @@
     "seneca-balance-client": "^1.0.0",
     "seneca-consul-registry": "^0.2.0",
     "seneca-entity": "^4.1.0",
+    "seneca-joi": "^4.1.0",
     "seneca-mesh": "^1.1.0",
     "seneca-mongo-store": "^1.4.1",
     "seneca-web": "^2.2.1",
